--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
 body{
-    font-family: 'montserrat',sans-serif;
+    font-family: 'roboto','raleway',sans-serif;
+}
+
+.header-logo-accent{
+color: var(--iris, #4D5AE5);
+font-size: 18px;
+font-weight: 800;
+line-height: 21px;
+letter-spacing: 0.54px;
 }
