--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,6 @@ body{
 color: var(--iris, #4D5AE5);
 font-size: 18px;
 font-weight: 800;
-line-height: 21px;
-letter-spacing: 0.54px;
+line-height: 1,16;
+letter-spacing: -0.03em;
 }
