--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Roboto',sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .header-logo-accent{
@@ -15,5 +15,5 @@ color: var(--navyblue, #2E2F42);
 font-size: 18px;
 font-weight: 800;
 line-height: 1,16;
-letter-spacing: -0.03;
+letter-spacing: 0.54px;
 }
