--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ body{
     font-family: "Roboto", sans-serif;
 }
 
+.link{
+    text-decoration: none;
+}
+
 .header-logo-accent{
 color: var(--iris, #4D5AE5);
 font-size: 18px;
@@ -10,10 +14,12 @@ line-height: 1,16;
 letter-spacing: -0.03em;
 }
 
-.header-logo-accent{
+.header-logo{
 color: var(--navyblue, #2E2F42);
 font-size: 18px;
 font-weight: 800;
 line-height: 1,16;
 letter-spacing: 0.54px;
 }
+
+.
