--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,12 @@ body{
     text-decoration: none;
 }
 
+.list{
+    list-style-type: none;
+}
+
 .header-logo-accent{
-color: var(--iris, #4D5AE5);
+color: #4D5AE5;
 font-size: 18px;
 font-weight: 800;
 line-height: 1,16;
@@ -15,11 +19,17 @@ letter-spacing: -0.03em;
 }
 
 .header-logo{
-color: var(--navyblue, #2E2F42);
+color:  #2E2F42;
 font-size: 18px;
 font-weight: 800;
 line-height: 1,16;
 letter-spacing: 0.54px;
 }
 
-.
+.header-link{
+color:  #2E2F42;
+font-size: 16px;
+font-weight: 500;
+line-height: 1,5;
+letter-spacing: 0.03em;
+}
