--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .body{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .link{
@@ -9,3 +9,94 @@
 .list{
     list-style-type: none;
 }
+
+/*HEADER*/
+
+.header-logo{
+color:#2E2F42;
+font-family: Raleway;
+font-size: 18px;
+font-style: normal;
+font-weight: 800;
+line-height: 21px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+text-decoration: none;
+}
+
+.header-link{
+color: #2E2F42;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-decoration: none;
+list-style-type: none;
+}
+
+.header-link:hover,
+.header-link:focus{
+color: #4D5AE5;
+}
+
+.header-cont-inform{}
+
+/*HERO*/
+
+.hero-title{
+color: #FFF;
+text-align: center;
+font-family: Roboto;
+font-size: 56px;
+font-weight: 700;
+line-height: 1.07;
+letter-spacing: 0.02em;
+}
+
+.hero-btn{
+color:  #FFF;
+font-family: Roboto;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.64px;
+background-color: #4D5AE5;
+cursor: pointer;
+}
+
+.title{
+color: #2E2F42;
+font-family: Roboto;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 1.02;
+letter-spacing: 0.02em;
+}
+
+.text{
+color: #2E2F42;
+font-family: Roboto;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.4px;
+}
+
+.setion-img{
+color: #2E2F42;
+text-align: center;
+font-family: Roboto;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0.72px;
+text-transform: capitalize;
+}
+
+
+
