--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@
 
 /*HEADER*/
 
+.hero{
+background:#2E2F42; 
+}
+
 .header-logo{
 color:#2E2F42;
 font-family: Raleway;
@@ -66,37 +70,22 @@ background-color: #4D5AE5;
 cursor: pointer;
 }
 
-.title{
-color: #2E2F42;
-font-family: Roboto;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.02;
-letter-spacing: 0.02em;
+/*ADVANTAGES*/
+
+.advantages{
+
 }
 
-.text{
-color: #2E2F42;
-font-family: Roboto;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0.4px;
+.advantages-list {
 }
 
-.setion-img{
-color: #2E2F42;
-text-align: center;
-font-family: Roboto;
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 40px;
-letter-spacing: 0.72px;
-text-transform: capitalize;
+.advantages-item {
 }
 
+.advantages-subtitle {
+}
+
+.advantages-item-text {
+}
 
 
