--- a/css/styles.css
+++ b/css/styles.css
@@ -13,36 +13,36 @@
 /*HEADER*/
 
 .hero{
-background:#2E2F42; 
+   background:#2E2F42; 
 }
 
 .header-logo{
-color:#2E2F42;
-font-family: Raleway;
-font-size: 18px;
-font-style: normal;
-font-weight: 800;
-line-height: 21px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-text-decoration: none;
+   color:#2E2F42;
+   font-family: Raleway;
+   font-size: 18px;
+   font-style: normal;
+   font-weight: 800;
+   line-height: 21px;
+   letter-spacing: 0.03em;
+   text-transform: uppercase;
+   text-decoration: none;
 }
 
 .header-link{
-color: #2E2F42;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-decoration: none;
-list-style-type: none;
+   color: #2E2F42;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   text-decoration: none;
+   list-style-type: none;
 }
 
 .header-link:hover,
 .header-link:focus{
-color: #4D5AE5;
+   color: #4D5AE5;
 }
 
 .header-cont-inform{}
@@ -50,30 +50,30 @@ color: #4D5AE5;
 /*HERO*/
 
 .hero-title{
-color: #FFF;
-text-align: center;
-font-family: Roboto;
-font-size: 56px;
-font-weight: 700;
-line-height: 1.07;
-letter-spacing: 0.02em;
+   color: #FFF;
+   text-align: center;
+   font-family: Roboto;
+   font-size: 56px;
+   font-weight: 700;
+   line-height: 1.07;
+   letter-spacing: 0.02em;
 }
 
 .hero-btn{
-color:  #FFF;
-font-family: Roboto;
-font-size: 16px;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0.64px;
-background-color: #4D5AE5;
-cursor: pointer;
+   color:  #FFF;
+   font-family: Roboto;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 24px;
+   letter-spacing: 0.64px;
+   background-color: #4D5AE5;
+   cursor: pointer;
 }
 
 /*ADVANTAGES*/
 
 .advantages{
-
+   background: #FFF;
 }
 
 .advantages-list {
@@ -83,6 +83,13 @@ cursor: pointer;
 }
 
 .advantages-subtitle {
+   color: var(--navyblue, #2E2F42);
+   font-family: Roboto;
+   font-size: 20px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 24px;
+   letter-spacing: 0.4px;
 }
 
 .advantages-item-text {
