--- a/css/styles.css
+++ b/css/styles.css
@@ -108,4 +108,17 @@
     letter-spacing: 0.02;
 }
 
+/*IMG*/
+
+.title-img-doing {
+}
+
+.title-doing {
+}
+
+.title-img {
+}
+
+.title-img-item {
+}
 
