--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@
    text-decoration: none;
 }
 
+.header-logo span{
+   color: #4D5AE5;
+}
+
 .header-link{
    color: #2E2F42;
    font-family: Roboto;
@@ -114,6 +118,14 @@
 }
 
 .title-doing {
+    color:#2E2F42;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
 }
 
 .title-img {
