--- a/css/styles.css
+++ b/css/styles.css
@@ -134,3 +134,27 @@
 .title-img-item {
 }
 
+/*TEAM IMG*/
+
+.title-ourteam {
+}
+
+.team-list {
+}
+
+.team-list-img {
+}
+
+.img-title-team {
+}
+
+.text-img-title {
+}
+
+/*FOOTER*/
+
+.footer-title {
+}
+
+.footer-text {
+}
