--- a/css/styles.css
+++ b/css/styles.css
@@ -146,14 +146,38 @@
 }
 
 .img-title-team {
+   color:#2E2F42;
+   text-align: center;
+   font-family: Roboto;
+   font-size: 20px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 24px;
+   letter-spacing: 0.02em;
 }
 
 .text-img-title {
+   color: #434455;
+   text-align: center;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 1.05em;
+   letter-spacing: 0.32px;
 }
 
 /*FOOTER*/
 
 .footer-title {
+   color:#F4F4FD;
+   font-family: Raleway;
+   font-size: 18px;
+   font-style: normal;
+   font-weight: 800;
+   line-height: 21px;
+   letter-spacing: 0.54px;
+   text-transform: uppercase;
 }
 
 .footer-text {
