--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,15 @@
 /*TEAM IMG*/
 
 .title-ourteam {
+   color: #2E2F42;
+   text-align: center;
+   font-family: Roboto;
+   font-size: 36px;
+   font-style: normal;
+   font-weight: 700;
+   line-height: 40px;
+   letter-spacing: 0.72px;
+   text-transform: capitalize;
 }
 
 .team-list {
@@ -169,6 +178,10 @@
 
 /*FOOTER*/
 
+.footer{
+   background: #2E2F42 ;
+}
+
 .footer-title {
    color:#F4F4FD;
    font-family: Raleway;
@@ -180,5 +193,16 @@
    text-transform: uppercase;
 }
 
+.footer-title span{
+  color:#4D5AE5;
+}
+
 .footer-text {
+   color: #F4F4FD;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 24px;
+   letter-spacing: 0.32px;
 }
