--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,20 @@
    color: #4D5AE5;
 }
 
-.header-cont-inform{}
+.header-cont-inform{
+   color: #434455;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 24px;
+   letter-spacing: 0.02em;
+}
+
+.header-cont-inform:hover,
+.header-cont-inform:focus{
+   color: #4D5AE5;
+}
 
 /*HERO*/
 
