--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .body{
     font-family: 'Roboto', sans-serif;
+    color:#FFF;
 }
 
 :root{
@@ -227,3 +228,8 @@
    line-height: 1.5em;
    letter-spacing: 0.02em;
 }
+
+/*PORTFOLIO*/
+
+
+
