--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 .body{
-    font-family: 'Roboto', sans-serif;
-    color:#FFF;
+    font-family: "Roboto", sans-serif;
+    color:#434455;
+    background-color: #FFFFFF
 }
 
 :root{
-   
+   --primsry-color::#2E2F42;
 }
 
 .visually-hidden {
