--- a/css/styles.css
+++ b/css/styles.css
@@ -232,5 +232,40 @@
 
 /*PORTFOLIO*/
 
+.portfolio {
+}
+.portfolio-btn {
+   color: var(--iris, #4D5AE5);
+   text-align: center;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 1.5em;
+   letter-spacing: 0.04em;
+}
 
+.img-portfolio {
+}
+
+.portfolio-til {
+}
+
+.portfolio-link {
+}
+
+.portfolio-img {
+}
+.portfolio-header {
+   
+}
+.portfolio-text {
+   color: var(--slate, #434455);
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 1.5em;
+   letter-spacing: 0.02em;
+}
 
