--- a/css/styles.css
+++ b/css/styles.css
@@ -212,21 +212,21 @@ body{
 
 .footer-title {
    color:var(--btn-color);
-   font-family: Raleway;
+   font-family: 'Raleway', sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 800;
-   line-height: 1.16em;
+   line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
 }
 
 .footer-title span{
-  color:var(--white-ground-color);
+  color: var(--white-cloud-color);
 }
 
 .footer-text {
-   color: var(--white-cloud-color;
+   color: var(--white-cloud-color);
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
