--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body{
 
 /*HEADER*/
 
-.header-logo link{
+.header-logo{
    color:var(--iris-color);
    font-family: "Raleway",sans-serif;
    font-size: 18px;
