--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ body{
 
 .team{
    background: #F4F4FD;
+   background-color: #FFFFFF
 }
 
 .title-ourteam {
@@ -174,7 +175,7 @@ body{
    font-size: 36px;
    font-style: normal;
    font-weight: 700;
-   line-height: 1.1em;
+   line-height: 1.11;
    letter-spacing: 0.02em;
    text-transform: capitalize;
 }
