--- a/css/styles.css
+++ b/css/styles.css
@@ -245,20 +245,22 @@ body{
    background: #FFF;
 }
 .portfolio-btn-list{
-   color: var(--btn-color);
+   color: var(--iris-color);
    text-align: center;
-   font-family: "Roboto";
+   font-family:"Roboto", sans-serif ;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.04em;
+   background-color:var(--white-cloud-color)
 }
 
 .portfolio-btn:hover,
 .portfolio-btn:focus{
-   color: var(--white-ground-color);
-   background-color: var(--btn-color);
+  color: var(--white-ground-color);
+  background-color: var(--btn-color);
+  
 }
 
 .img-portfolio {
@@ -273,7 +275,7 @@ body{
 .portfolio-img {
 }
 .portfolio-header {
-   color: var(--navyblue-text-color);
+   color: var(--iris-color);
    font-family: "Roboto";
    font-size: 20px;
    font-style: normal;
@@ -288,7 +290,7 @@ body{
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
-   line-height: 1.5em;
+   line-height: 1.5;
    letter-spacing: 0.02em;
    text-decoration: none;
 }
