--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,6 @@ body{
     font-size: 16px;
 }
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-
 .link{
     text-decoration: none;
 }
@@ -80,7 +67,7 @@ body{
 
 .header-cont-inform:hover,
 .header-cont-inform:focus{
-   color: #4D5AE5;
+   color: var(--btn-color);
 }
 
 /*HERO*/
