--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,10 @@ body{
    color: var(--navyblue-text-color);
 }
 
+.contact{
+   font-style: normal;
+}
+
 .header-link{
    color:var(--navyblue-text-color);
    font-family: "Roboto";
@@ -195,7 +199,7 @@ body{
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
-   line-height: 1.5em;
+   line-height: 1.5;
    letter-spacing: 0.02em;
 }
 
@@ -226,7 +230,7 @@ body{
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
-   line-height: 1.5em;
+   line-height: 1.5;
    letter-spacing: 0.02em;
 }
 
