--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ body{
 .portfolio {
    background: #FFF;
 }
-.portfolio-btn-list{
+.portfolio-btn{
    color: var(--iris-color);
    text-align: center;
    font-family:"Roboto", sans-serif ;
