--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ body{
    line-height: 1.5em;
    letter-spacing: 0.64px;
    background-color: #4D5AE5;
+   cursor: pointer;
 }
 
 .hero-btn:hover,
