--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ body{
 }
 
 .footer-title {
-   color:var(--btn-color);
+   color:var(--iris-color);
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
    font-style: normal;
