--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ body{
 .portfolio-img {
 }
 .portfolio-header {
-   color: var(--iris-color);
+   color: var(--navyblue-text-color);
    font-family: "Roboto";
    font-size: 20px;
    font-style: normal;
