--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body{
 }
 
 .header-cont-inform{
-   color: #434455;
+   color: var(--slate-text-color);
    font-family: "Roboto";
    font-size: 16px;
    font-style: normal;
@@ -70,6 +70,9 @@ body{
    color: var(--btn-color);
 }
 
+.contact{
+   font-style: normal;
+}
 
 
 /*HERO*/
