--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body{
    text-decoration: none;
 }
 
-.header-title span{
+.header-logo{
    color: var(--navyblue-text-color);
 }
 
@@ -222,7 +222,7 @@ body{
    text-transform: uppercase;
 }
 
-.footer-title span{
+.footer-logo{
   color: var(--white-cloud-color);
 }
 
